# rust-gob

./: Cargo.toml  user.gob
benches/: serialize.rs
crates/serde_gob/: Cargo.toml
crates/serde_gob/src/: lib.rs  schema.rs  serialize.rs
crates/serde_gob/src/types/: builder.rs  mod.rs
crates/serde_gob_derive/: Cargo.toml
crates/serde_gob_derive/src/: derive_enum.rs  derive_struct.rs  lib.rs
src/: error.rs  lib.rs  schema.rs
src/de/: mod.rs
src/internal/: gob.rs
src/internal/de/: field_value.rs  interface_value.rs  map_value.rs  mod.rs  seq_value.rs  struct_value.rs  value.rs
src/internal/ser/: mod.rs  serialize_empty.rs  serialize_map.rs  serialize_seq.rs  serialize_struct.rs  serialize_tuple.rs  serialize_variant.rs  serialize_wire_types.rs
src/internal/types/: array_type.rs  common_type.rs  map_type.rs  mod.rs  slice_type.rs  struct_type.rs  wire_type.rs
src/ser/: mod.rs  output.rs  serialize_map.rs  serialize_seq.rs  serialize_struct.rs  serialize_struct_variant.rs  serialize_tuple.rs
tests/: ser.rs  test_gitea_gob.rs  user.gob
